[fix] : top-btn z-index

--- a/assets/styles/single-page.scss
+++ b/assets/styles/single-page.scss
@@ -53,7 +53,6 @@
   }
 }
 
-
 .section-container {
   .single-content {
     width: 100%;
@@ -75,7 +74,7 @@
   background-color: var(--navbackground);
   border-left: 1px solid lightgray;
   padding: 0 1em;
-  z-index: 15;
+  z-index: 4;
 
   .single-graph-container {
     .graph-header {
